@startuml
'--------MVVM(Model, View, ModelView)パターン--------
'------------Modelの設計----------------

class Config{
    + static final String imgUrl
    + static final String[] genderArr
    + static final String[] jobArr
}

class TraitsReader{
    - static final String[] basicTraitsArr

    + static getTraitsArr(gender: String, job: String): String[]
}

class Status{
    - int strength
    - int agility
    - int resilience
    - int wisdom
    - int luck

    + Status()
    + setStrength()
    + setAgility()
    + setResilience()
    + setWisdom()
    + setLuck()

    + getStrength(): int
    + getAgility(): int
    + getResilience(): int
    + getWisdom(): int
    + getLuck(): int
}

class TraitsWrapper{
    - String traits

    + TraitsWrapper(traits: String)

    + setTraits()

    + getTraits(): String

    + fetchStrengthWithStatus(status: Status): int
    + fetchgilityWithStatus(status: Status): int
    + fetchResilienceWithStatus(status: Status): int
    + fetchWisdomWithStatus(status: Status): int
    + fetchLuckWithStatus(status: Status): int
}

class RPGCharacter{
    - String name
    - String gender
    - String job
    - String imgUrl
    - Status status
    - TraitsWrapper traitsWrapper

    + RPGCharacter()

    + setName(name: String)
    + setGender(gender: String)
    + setJob(job: String)
    + setImgUrl(gender: String, job: String)
    + setStatus(status: Status)
    + setTraitsWrapper(traitsWapper: TraitsWrapper)

    + getName(): String
    + getGender(): String
    + getJob(): String
    + getImgUrl(): String
    + getStatus(): Status
    + getTraitsWrapper(): TraitsWrapper
}

'------------ViewModelの設計----------------
'Vueは書いていない、VueはViewModelそのもの


'------------各クラスの関係----------------
'依存関係
TraitsWrapper ..> Status
'コンポジション
RPGCharacter --* TraitsWrapper
RPGCharacter --* Status


@enduml